#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-29
2016-10-17 David Schneider
-  update to pdsdata 8.6.17 and psddldata V01-00-49 for fix to BldDataBeamMonitorV1. JIRA PSAS-269

Tag: V00-06-28
2016-9-30 David Schneider
- update to pdsdata 8.6.16 and psddldata V01-00-48 for BldDataBeamMonitorV1 and BldUsdUsbV1

Tag: V00-06-27
2016-6-13 David Schneider
- update to pdsdata 8.6.12 for Partition::ConfigV2 JIRA PSAS-241

Tag: V00-06-26
2016-6-2 David Schneider
- update to pdsdata 8.6.10 with BldDataEOrbitsV0 JIRA PSAS-239
  and smldata fix PSAS-237

Tag: V00-06-25
2016-4-18 David Schneider
- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229

Tag: V00-06-24
2016-4-4 David Schneider
- update to pdsdata 8.6.7 with UsdUsb::FexConfigV1,FexDataV1, and Generic1D::ConfigV0,DataV0

Tag: V00-06-23
2016-2-5 David Schneider
- update to pdsdata 8.6.1 with Andor3d::FrameV1 (and ConfigV1) JIRA PSAS-214

Tag: V00-06-22
2015-12-10 David Schneider
- update to pdsdata 8.4.6 with modified Epix::Config100aV2 JIRA PSAS-198

Tag: V00-06-21
2015-6-26 David Schneider
- update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166

Tag: V00-06-20
2015-5-28 David Schneider
- update to pdsdata 8.2.9 with BldDataSpectrometerV1 hproj int32 fix, JIRA PSAS-151

Tag: V00-06-19
2015-5-1 David Schneider
- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144

Tag: V00-06-18
2015-2-23 David Schneider
- update to pdsdata 8.2.4 with EvrDataV4 and present function

Tag: V00-06-17
2015-2-4 David Schneider
- update psddlc wrapper, JIRA PSAS-103

Tag: V00-06-16
2015-2-3 David Schneider
- change wrapper for psddl to Python, add devel option